--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,13 @@ project(kaleidoscope)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(kaleidoscope main.cpp lexer.hpp ast/expr.hpp ast/stmt.hpp parser.hpp)
+add_executable(
+    kaleidoscope
+    main.cpp
+    lexer/lexer.h
+    lexer/lexer.cpp
+    ast/expr.hpp
+    ast/stmt.hpp
+    parser/parser.h
+    parser/parser.cpp
+)
