Simple Token class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,8 @@ project(lox)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(lox main.cpp)
+add_executable(lox main.cpp
+	Common.h
+	Token/Token.h
+	Token/Token.cpp
+)
